[package]
name = "rust-tokio"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "^0.22.3", features = ["tokio-comp"] }
tokio = { version = "^1.0.26", features = ["full"] }
